# project-stable-mir

./: .gitignore  404.html  CHARTER.html  CHARTER.md  Cargo.toml  README.md  SUMMARY.md  contributing.html  getting-started.html  index.html  initial.html  josh-sync.toml  migrating.html  print.html  rust-toolchain.toml  rust-version  rustfmt.toml  searchindex.js  searchindex.json  toc.html  toc.js  triagebot.toml  tricks.html  x
.github/scripts/: run_own_tests.sh  run_rustc_tests.sh
.github/workflows/: demo.yml  deploy_mdbook.yml  format.yml  nightly.yml  rustc_pull.yml
book/: book.toml
book/src/: SUMMARY.md  contributing.md  getting-started.md  initial.md  migrating.md  tricks.md
demo/: Cargo.toml  build.rs  run_demo.sh  rust-toolchain.toml
demo/example/: methods.rs
demo/src/: main.rs
dev/: README.md  index.html
devtool/: Cargo.toml
devtool/src/: main.rs  utils.rs
draft-rfcs/: index.html
meetings/: index.html
rustc_public/: Cargo.toml  build.rs
rustc_public/src/: lib.rs
rustc_public/tests/fixme/: ice_too_generic.rs  ice_too_generic.stderr
rustc_public/tests/print/: async-closure.rs  async-closure.stdout  basic_function.stdout  operands.rs
rustc_public/tests/sanity-checks/associated-items/: methods.rs
rustc_public/tests/sanity-checks/simple/: simple_lib.rs
scripts/: pre-push.sh
src/: lib.rs  mir.rs  ty.rs
test-drive/: Cargo.toml  build.rs
test-drive/src/: main.rs  sanity_checks.rs
tests/: compiletest.rs
tests/fixme/associated-items/: methods.stderr
tests/print/: basic_function.rs  operands.stdout
tests/sanity-checks/associated-items/: methods.rs
tests/sanity-checks/simple/: simple_lib.rs
tools/compiletest/: Cargo.toml  build.rs
tools/compiletest/src/: args.rs  main.rs
tools/test-drive/: Cargo.toml  build.rs
tools/test-drive/src/: main.rs  sanity_checks.rs
