[package]
name = "test-drive"
description = "A rustc wrapper that can be used to test rustc_public on a crate"
version = "0.0.0"
edition = "2021"

[dependencies]
rustc_public = { path = "../rustc_public", features = ["rustc_internal"] }

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)].
# See https://github.com/rust-analyzer/rust-analyzer/pull/7891
rustc_private = true
