[package]
name = "compiletest"
description = "Run tests using compiletest-rs"
version = "0.0.0"
edition = "2021"

[dependencies]
compiletest_rs = { version = "0.10.0", features = [ "rustc" ] }
clap = { version = "4.1.3", features = ["derive"] }

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)].
# See https://github.com/rust-analyzer/rust-analyzer/pull/7891
rustc_private = true
