[package]
name = "compiletest"
description = "Run tests using compiletest-rs"
version = "0.0.0"
edition = "2021"

[dependencies]
ui_test = "0.20.0"
clap = { version = "4.1.3", features = ["derive"] }

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)].
# See https://github.com/rust-analyzer/rust-analyzer/pull/7891
rustc_private = true
